# Golden_Key

./: .gitignore  docker-compose.yml  pyproject.toml  test.py
bot/: .env  alembic.ini  bot.py  config.py  handlers.py  system_prompt.md  system_prompt_V2.md  twst.py
bot/alembic/: env.py
bot/alembic/versions/: d3a56b196dc6_new_db.py  f3c1ed8231d5_your_migration_message.py
bot/db/: sessions.py
bot/db/models/: gk_base_info.py  user.py
bot/db/repositories/: gk_user_repository.py  halls_repository.py  products_repository.py  promo_repository.py  user_repository.py
bot/db/schemas/: gk_user.py  halls_validate.py  user.py
bot/filters/: __init__.py  admin.py  in_state.py
bot/handlers/: halls.py  login.py  passes.py  services.py  sessions.py  transfers.py
bot/keyboards/: __init__.py  inline.py  reply.py
bot/messages/: base_config.py  ru_config.py
bot/middleware/: __init__.py  auth.py  gk_auth.py  logging.py  throttling.py
bot/routers/: __init__.py  main.py  user.py
bot/states/: __init__.py  auth.py
bot/utils/: utils.py
bot/utils/clients/: GK_ApiClient.py  llm_agent.py
bot/utils/clients/types/: auth.py  orders.py  passes.py  promo.py  services.py  user.py
bot/utils/messages/: delete_hist.py  replace.py
bot/utils/validate/: email.py  name.py  phone.py
notes/: Баг лист.md
